[workspace]
resolver = "2"

members = [
    "yeet", "yeet-buffer", "yeet-frontend", "yeet-keymap",
]

[workspace.package]
authors = ["Alexander Serowy"]
description = "yet another... tui file manager with a touch of neovim like buffers and modal editing"
edition = "2021"
repository = "https://github.com/aserowy/yeet"
version = "0.1.0"

[workspace.dependencies]
ansi-to-tui = "7.0.0"
arboard = { version = "3.6.1", default-features = false, features = ["windows-sys", "wayland-data-control"] }
clap = "4.5.53"
crossterm = { version = "0.29.0", features = ["event-stream"] }
csv = "1.4.0"
dirs = "6.0.0"
flate2 = "1.1.5"
futures = "0.3.31"
image = "0.25.9"
infer = "0.19.0"
notify = { version = "8.2.0", default-features = false, features = ["macos_fsevent"] }
pathdiff = "0.2.2"
ratatui = "0.29.0"
ratatui-image = { version = "8.1.1", features = ["crossterm", "serde"] }
regex = "1.12.2"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"]}
tar = "0.4.44"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"

[workspace.lints.rust]
unsafe_code = "forbid"
