[package]
name = "teywi-frontend"
version = "0.0.1"
edition = "2021"

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.25.0"
teywi-keymap = { path = "../teywi-keymap" }
teywi-server = { path = "../teywi-server" }
tokio = { version = "1.35.1", features = ["full"] }
