[package]
name = "teywi-server"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
atoi = "2.0.0"
bytes = "1.5.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1.40"
