[package]
name = "y1337-frontend"
version = "0.0.1"
edition = "2021"

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.26.1"
y1337-keymap = { path = "../y1337-keymap" }
tokio = { version = "1.35.1", features = ["full"] }
dirs = "5.0.1"
csv = "1.3.0"
thiserror = "1.0.56"
notify = { version = "6.1.1", default-features = false, features = ["macos_fsevent"] }
infer = "0.15.0"
