[package]
name = "y1337"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
y1337-frontend = { path = "../y1337-frontend" }
tokio = { version = "1.35.1", features = ["full"] }
thiserror = "1.0.56"
clap = "4.5.1"
