[package]
name = "yate-frontend"
version = "0.0.1"
edition = "2021"

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.25.0"
yate-keymap = { path = "../yate-keymap" }
tokio = { version = "1.35.1", features = ["full"] }
dirs = "5.0.1"
csv = "1.3.0"
