[package]
name = "yate"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yate-frontend = { path = "../yate-frontend" }
tokio = { version = "1.35.1", features = ["full"] }
thiserror = "1.0.56"
clap = { version = "4.5.0", features = ["derive"] }
