[package]
name = "yeet-frontend"

authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
yeet-buffer = { path = "../yeet-buffer" }
yeet-keymap = { path = "../yeet-keymap" }

arboard.workspace = true
crossterm.workspace = true
csv.workspace = true
dirs.workspace = true
flate2.workspace = true
futures.workspace = true
image.workspace = true
infer.workspace = true
mlua = { version = "0.11.5", features = ["lua54", "vendored"] }
notify.workspace = true
pathdiff.workspace = true
ratatui.workspace = true
ratatui-image.workspace = true
syntect.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
