[package]
name = "yeet-frontend"

authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
yeet-buffer.workspace = true
yeet-keymap.workspace = true
yeet-lua.workspace = true
yeet-plugin.workspace = true

arboard.workspace = true
crossterm.workspace = true
csv.workspace = true
dirs.workspace = true
flate2.workspace = true
futures.workspace = true
image.workspace = true
infer.workspace = true
notify.workspace = true
pathdiff.workspace = true
ratatui.workspace = true
ratatui-image.workspace = true
syntect.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
