[package]
name = "yeet-keymap"

authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
yeet-buffer = { path = "../yeet-buffer" }

crossterm.workspace = true
dirs.workspace = true
regex.workspace = true
thiserror.workspace = true
tracing.workspace = true
