[package]
name = "yeet-lua"

authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
yeet-buffer = { path = "../yeet-buffer" }

dirs.workspace = true
mlua.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
