[package]
name = "yeet-lua"

authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
yeet-buffer.workspace = true

dirs.workspace = true
mlua.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
