[package]
name = "yeet-plugin"

authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
dirs.workspace = true
gix.workspace = true
semver.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
