[package]
name = "yeet"

authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
yeet-frontend.workspace = true
yeet-lua.workspace = true
yeet-plugin.workspace = true

clap.workspace = true
dirs.workspace = true
mlua.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
ratatui.workspace = true
tempfile = "3"
